# Recipe-Generator

./: README.md  pyproject.toml
utils/: check_ollama_models.py  ollama_redirect.py
veel_internship/: main.py
veel_internship/gradio_imp/: recipe_grad.py
veel_internship/models/: model_input.py  ollama_model.py
veel_internship/prompts/: prompt_templates.py  user_prompt.py
veel_internship/routes/: rag_router.py  recipe_router.py
veel_internship/schemas/: pydantic_schema.py  userinput.py
