[project]
name = "veel-internship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coloredlogs>=15.0.1",
    "colorlog>=6.9.0",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "ollama>=0.4.8",
    "pydantic>=2.11.3",
    "uvicorn>=0.34.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
